--- a/views/user/orderDetailsUser.ejs
+++ b/views/user/orderDetailsUser.ejs
@@ -54,7 +54,7 @@
                         Cancel
                        </button>
                         <% } %>
-                        <% if(order.status == "Delivered") {%>  
+                        <% if(order.status == "Delivered" || order.status == "returnRejected") {%>  
                             <button class="align-middle select-none font-sans font-bold text-center uppercase transition-all disabled:opacity-50 disabled:shadow-none disabled:pointer-events-none text-xs py-3 px-6 rounded-lg bg-sky-500 text-white shadow-md shadow-gray-900/10 hover:shadow-lg hover:shadow-gray-900/20 focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none" type="button" onclick="openModal()">
                                 Return
                                 </button>
