--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -7,11 +7,14 @@
 
 <main>
 
+  
+
         <!---------------- Sorting orders ---------------->
-<section class="flex justify-end items-end w-3/4">
+<section class="flex flex-col justify-end items-end w-3/4 ">
+  
   <div class="relative">
     <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="mt-12 text-gray-950 h-9 w-44 border border-gray-950 bg-gray-500  focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-2.5 inline-flex dark:bg-gray-50 dark:hover:bg-gray-700 dark:hover:text-white dark:focus:ring-blue-800 justify-center" type="button" onclick="toggleDropdown()">
-      <span class="flex items-center font-thin">Sort By</span>
+      <span class="flex items-center font-thin">Select By</span>
       <svg class="w-2.5 h-2.5 mt-2 ml-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/></svg>
     </button>
     <div id="dropdown" class="absolute right-0 z-10 hidden bg-white divide-y divide-gray-100 shadow w-44 dark:bg-gray-100 text-gray-950">
@@ -28,12 +31,16 @@
       </ul>
     </div>
   </div>
+  <!--------- Total sales goes here -------------->
+  <div>
+    <span>Sales Total : </span>
+  </div>
 </section>
 
 
   <section>
 
-    <div class="w-3/4 ml-5">
+    <div class="w-3/4 ml-5 mt-5">
       <table class="items-center bg-transparent w-full border-collapse ">
         <thead>
             
