--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -32,6 +32,7 @@
   </style>
 
    <main>
+
         <div class="p-6">
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-6">
                 <div class="bg-white rounded-md border border-gray-100 p-6 shadow-md shadow-black/5">
@@ -65,7 +66,10 @@
                     <a href="/admin/category-list" class="text-[#f84525] font-medium text-sm hover:text-red-800">View</a>
                 </div>
             </div>
-                <!-- Graph 1 -->
+            <div class="mb-10 text-center">
+              <h1 class="michroma-regular text-lg text-gray-950 py-5">Sales Overview</h1>
+            </div>
+            
                 <div class="grid grid-cols-1 lg:grid-cols-1 mb-6">
          
                   <div class="relative flex flex-col min-w-0 mb-4 lg:mb-0 break-words bg-gray-50 shadow-lg w-full">
@@ -94,10 +98,10 @@
         </div>
 
             <!---------------- Sorting orders ---------------->
-<section class="flex justify-end items-end">
+<!-- <section class="flex justify-end items-end">
   <div class="relative">
     <button id="dropdownDefaultButton" data-dropdown-toggle="dropdown" class="mt-12 text-gray-950 h-9 w-44 border border-gray-950 bg-gray-500  focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium text-sm px-5 py-2.5 inline-flex dark:bg-gray-50 dark:hover:bg-gray-700 dark:hover:text-white dark:focus:ring-blue-800 justify-center" type="button" onclick="toggleDropdown()">
-      <span class="flex items-center font-thin">Sort By</span>
+      <span class="flex items-center font-thin">Select By</span>
       <svg class="w-2.5 h-2.5 mt-2 ml-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/></svg>
     </button>
     <div id="dropdown" class="absolute right-0 z-10 hidden bg-white divide-y divide-gray-100 shadow w-44 dark:bg-gray-100 text-gray-950">
@@ -114,80 +118,67 @@
       </ul>
     </div>
   </div>
+</section> -->
+
+
+<section class="pb-28 w-3/3 pt-12">
+  <div class="text-center">
+    <h1 class="michroma-regular text-lg text-gray-950">Top 10 Overview</h1>
+  </div>
+  <div class="flex flex-row py-12">
+    <table class="items-center bg-transparent border-collapse w-full">
+      <thead>
+        <tr>
+          <th class=" bg-green-700 text-white text-center align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold">
+            Product Name</th></tr>
+      </thead>
+      <tbody>
+        <tr class="flex flex-col">
+          <% list[3].forEach(pro => { %>
+          <td class="border-t-0 py-2 align-middle text-xs whitespace-nowrap text-center  font-semibold border border-gray-900">
+             <%= pro.productName %> 
+          </td>
+        <% }) %></tr>
+      </tbody>
+    </table>
+
+    <table class="items-center bg-transparent border-collapse w-full">
+      <thead>
+        <tr>
+          <th class=" bg-green-700 text-white text-center align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold">
+            Category Name</th></tr>
+      </thead>
+      <tbody>
+        <tr class="flex flex-col">
+          <% list[4].forEach(pro => { %>
+          <td class="border-t-0 py-2 align-middle text-xs whitespace-nowrap text-center font-semibold border border-gray-900">
+             <%= pro.category %><% }) %>
+      </tr>
+      </tbody>
+    </table>
+
+    <table class="items-center bg-transparent border-collapse w-full">
+      <thead>
+        <tr>
+          <th class=" bg-green-700 text-white text-center align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold">
+            Brand Name</th>
+           </tr>
+      </thead>
+      <tbody>
+        <tr class="flex flex-col">
+          <% list[5].forEach(pro => { %>
+          <td class="border-t-0 py-2 align-middle text-xs whitespace-nowrap text-center font-semibold border border-gray-900">
+             <%= pro.brand %> 
+          </td>
+        <% }) %>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+
 </section>
 
 
-<!-- 
-<section class="py-1 bg-blueGray-50 ">
-  <h1 class="font-bold text-2xl">Top Sellers</h1>
-  <div class="w-full mb-12 xl:mb-0 px-2 mt-5">
-    <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded ">
-      <div class="rounded-t mb-0 px-4 border-0">
-        <div class="flex flex-wrap items-center">
-          <div class="relative w-full px-4 max-w-full flex-grow flex-1">
-            <h3 class="font-semibold text-base text-blueGray-700">    </h3>
-          </div>
-  
-        </div>
-      </div>
-  
-      <div class="w-full">
-        <table class="items-center bg-transparent border-collapse w-full">
-          <thead>
-              
-            <tr>
-              <th class=" bg-pink-500 pl-5 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
-                           Name</th>
-              <th class=" bg-pink-500 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3  text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
-                           Description</th>
-            <th class=" bg-pink-500 text-blueGray-500  border border-solid border-blueGray-100 py-3 pr-20  text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold">
-                            Edit</th>
-            <th class=" bg-pink-500 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 pr-20 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
-                            Delete</th>
-          
-           
-            </tr>
-          </thead>
-  
-          <tbody>
-              
-            <tr>
-              <td class="border-t-0 pl-5 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap">
-                  category.categoryName 
-              </td>
-           
-              <td class="border-t-0 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap w-auto">
-                 category.description %>
-              </td>
-       
-              <td class="border-t-0 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap">
-                  <a href="./category-edit/" class="font-medium font-sans text-xs text-red-950  hover:underline">
-                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-3">
-                          <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
-                        </svg>
-                    </a>
-              </td>
-              <td class="border-t-0 align-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
-                  <a href="./category-block/" class="font-medium text-red-950  hover:underline">
-                     
-                      
-              </td>
-         
-            </tr>
-        
-          </tbody>
-  
-        </table>
-        <section class="mb-14 mt-10">
-          <a href="./category-add" type="submit" class="flex w-32 rounded-md bg-pink-500 px-3 py-1.5 text-sm font-semibold leading-6 text-gray-700 shadow-sm hover:bg-yellow-500 hover:text-white focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add Category</a>
-  
-      </section> -->
-      </div>
-    </div>
-  </div>
-  
-  </section>
-      <!-- End Content -->
     </main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -241,7 +232,7 @@
                   datasets: [{
                       label: '# Daily',
                       data: dailyData,
-                      backgroundColor: 'rgba(54, 162, 235, 0.2)', 
+                      backgroundColor: 'rgba(16, 232, 163, 1)',
                       borderColor: 'rgba(54, 162, 235, 1)', 
                       borderWidth: 1
                   }]
@@ -303,7 +294,7 @@
                   datasets: [{
                       label: '# Daily',
                       data: dailyData,
-                      backgroundColor: 'rgba(54, 162, 235, 0.2)', 
+                      backgroundColor: 'rgba(16, 232, 163, 1)',
                       borderColor: 'rgba(54, 162, 235, 1)', 
                       borderWidth: 1
                   }]
@@ -346,6 +337,8 @@
                 datasets: [{
                   label: '# Monthly',
                   data: monthlyData,
+                  backgroundColor: 'rgba(16, 232, 163, 1)',
+                  borderColor: 'rgba(54, 162, 235, 1)', 
                   borderWidth: 1
                 }]
               },
@@ -388,6 +381,8 @@
                 datasets: [{
                   label: '# Yearly',
                   data: yearlyData,
+                  backgroundColor: 'rgba(16, 232, 163, 1)',
+                  borderColor: 'rgba(54, 162, 235, 1)', 
                   borderWidth: 1
                 }]
               },
