--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -34,8 +34,12 @@
    <main>
 
         <div class="p-6">
+          <div class="mb-10 text-center">
+            <h1 class="michroma-regular text-lg text-gray-950 py-5">Dashboard</h1>
+          </div>
+          
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-6">
-                <div class="bg-white rounded-md border border-gray-100 p-6 shadow-md shadow-black/5">
+                <div class="bg-white rounded-md p-6">
                     <div class="flex justify-between mb-6">
                         <div>
                             <div class="flex items-center mb-1">
@@ -46,7 +50,7 @@
                     </div>
                     <a href="/admin/userManagement" class="text-[#f84525] font-medium text-sm hover:text-red-800">View</a>
                 </div>
-                <div class="bg-white rounded-md border border-gray-100 p-6 shadow-md shadow-black/5">
+                <div class="bg-white rounded-md p-6">
                     <div class="flex justify-between mb-4">
                         <div>
                             <div class="flex items-center mb-1">
@@ -72,14 +76,14 @@
             
                 <div class="grid grid-cols-1 lg:grid-cols-1 mb-6">
          
-                  <div class="relative flex flex-col min-w-0 mb-4 lg:mb-0 break-words bg-gray-50 shadow-lg w-full">
+                  <div class="relative flex flex-col min-w-0 mb-4 lg:mb-0 break-words w-full ml-20">
                       <div class="mb-0 px-0 border-0">
                           <div class="flex flex-wrap items-center px-4 py-2">
-                              <div class="bg-white border border-gray-100 shadow-md w-full">
+                              <div class="  w-10/12">
                                   <div class="grid grid-cols-1 lg:grid-cols-1 gap-6 mb-6">
-                                      <div class="bg-white border border-gray-100 shadow-md p-6 rounded-md lg:col-span-2">
+                                      <div class="bg-white p-6 lg:col-span-2 shadow-xl border border-gray-400">
                                       
-                                          <select class="graphSales block w-36 h-6  text-gray-500 shadow-sm  focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6 font-sans">
+                                          <select class="graphSales block w-36 h-6  text-gray-500 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:max-w-xs sm:text-sm sm:leading-6 font-sans">
                                             <option selected disabled selected>Daily</option>
                                             <option value="Daily">Daily</option>
                                             <option value="Monthly">Monthly</option>
@@ -166,7 +170,7 @@
       </thead>
       <tbody>
         <tr class="flex flex-col">
-          <% list[5].forEach(pro => { %>
+          <%list[5].forEach(pro => { %>
           <td class="border-t-0 py-2 align-middle text-xs whitespace-nowrap text-center font-semibold border border-gray-900">
              <%= pro.brand %> 
           </td>
@@ -234,16 +238,32 @@
                       data: dailyData,
                       backgroundColor: 'rgba(16, 232, 163, 1)',
                       borderColor: 'rgba(54, 162, 235, 1)', 
+                      color : 'rgba(54, 162, 235, 1)',
                       borderWidth: 1
                   }]
               },
               options: {
-                  scales: {
-                      y: {
-                          beginAtZero: true
-                      }
-                  }
-              }
+    scales: {
+      x: {
+        grid: {
+          color: 'rgba(249, 221, 41, 0.6)'
+          
+        },
+        ticks: {
+          color: 'green' 
+        }
+      },
+      y: {
+        grid: {
+          color: 'rgba(249, 221, 41, 0.6)'
+          
+        },
+        ticks: {
+          color: 'red' 
+        }
+      }
+    }
+  }
           });
       })
       .catch(error => console.error('Error fetching or processing data:', error));
@@ -258,21 +278,17 @@
         const changeValue = select.value;
      
         const canvas = div.querySelector('canvas');
-        
-        // Get the Chart instance associated with the canvas
         let chartInstance = Chart.getChart(canvas);
-
-        // Destroy the existing Chart instance
         if (chartInstance) {
             chartInstance.destroy();
-        }
+            }
 
         if(changeValue == "Daily"){
           fetch('/admin/orders/Daily')
       .then(response => {
           if (!response.ok) {
               throw new Error('Network response was not ok');
-              }
+          }
           return response.json();
       })
       .then(data => {
@@ -280,13 +296,15 @@
               day: new Date(order.createdate).getDate(), 
               quantity: order.total
           }));
+
           const dailyData = Array.from({ length: 30 }, () => 0);
+
           ordersData.forEach(order => {
               const day = order.day;
               dailyData[day - 1] += order.quantity; 
           });
+
           const ctx = document.getElementsByClassName('myChart');
-          
           new Chart(ctx, {
               type: 'bar',
               data: {
@@ -296,20 +314,35 @@
                       data: dailyData,
                       backgroundColor: 'rgba(16, 232, 163, 1)',
                       borderColor: 'rgba(54, 162, 235, 1)', 
+                      color : 'rgba(54, 162, 235, 1)',
                       borderWidth: 1
                   }]
               },
               options: {
-                  scales: {
-                      y: {
-                          beginAtZero: true
-                      }
-                  }
-              }
-          });
-      })
-      .catch(error => console.error('Error fetching or processing data:', error)
-      )}else if(changeValue == "Monthly"){
+    scales: {
+      x: {
+        grid: {
+          color: 'rgba(249, 221, 41, 0.6)'
+          
+        },
+        ticks: {
+          color: 'green' 
+        }
+      },
+      y: {
+        grid: {
+          color: 'rgba(249, 221, 41, 0.6)'
+          
+        },
+        ticks: {
+          color: 'red' 
+        }
+      }
+    }
+  }})})
+      .catch(error => console.error('Error fetching or processing data:', error));
+
+      }else if(changeValue == "Monthly"){
 
           fetch('/admin/orders/Monthly')
           .then(response => {
