--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -1541,12 +1541,12 @@ video {
                         <div class="flex-shrink-0 w-10 h-10 relative">
                             <div class="p-1 bg-white rounded-full focus:outline-none focus:ring">
                                 <img class="w-8 h-8 rounded-full" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRt4JJ9CaOw42sdxKm7W85jTxspZLMIMApJ1s5LI3Os96wkneaW30i9hja4SmNphfhY-LM&usqp=CAU" alt=""/>
-                                <div class="top-0 left-7 absolute w-3 h-3 bg-lime-400 border-2 border-white rounded-full animate-ping"></div>
-                                <div class="top-0 left-7 absolute w-3 h-3 bg-lime-500 border-2 border-white rounded-full"></div>
+                                <div class="top-0 left-7 absolute w-3 h-3 bg-green-900 border-2 border-white rounded-full animate-ping"></div>
+                                <div class="top-0 left-7 absolute w-3 h-3 bg-green-500 border-2 border-white rounded-full"></div>
                             </div>
                         </div>
                         <div class="p-2 md:block text-left">
-                            <h2 class="text-sm  text-gray-800">Admin</h2>
+                            <h2 class="text-sm  text-gray-950">Admin</h2>
                             <p class="text-xs text-gray-500">Administrator</p>
                         </div>                
                     </button>
